[gd_scene load_steps=60 format=3 uid="uid://bq7eq1ply4qj4"]

[ext_resource type="Texture2D" uid="uid://dwikte7qebdv8" path="res://assets/sprites/zombie/male/Attack (1).png" id="1_i6wqh"]
[ext_resource type="Script" uid="uid://bakknaceqcbtl" path="res://scripts/zombie_male.gd" id="1_t35ya"]
[ext_resource type="Texture2D" uid="uid://dml7y8wiglbpp" path="res://assets/sprites/zombie/male/Attack (2).png" id="2_t35ya"]
[ext_resource type="Texture2D" uid="uid://bqixlaaeux32x" path="res://assets/sprites/zombie/male/Attack (3).png" id="3_5qykh"]
[ext_resource type="Texture2D" uid="uid://cod1mbwkrq2e8" path="res://assets/sprites/zombie/male/Attack (4).png" id="4_6nj7t"]
[ext_resource type="Texture2D" uid="uid://d38lqrbmgwd6y" path="res://assets/sprites/zombie/male/Attack (5).png" id="5_i8ipc"]
[ext_resource type="Texture2D" uid="uid://cyh2y8caqdjut" path="res://assets/sprites/zombie/male/Attack (6).png" id="6_qswhy"]
[ext_resource type="Texture2D" uid="uid://cimc8uxqetxie" path="res://assets/sprites/zombie/male/Attack (7).png" id="7_ghqjj"]
[ext_resource type="Texture2D" uid="uid://c0w7mrqqph7jq" path="res://assets/sprites/zombie/male/Attack (8).png" id="8_bp43y"]
[ext_resource type="Texture2D" uid="uid://d1gq0niahd7gc" path="res://assets/sprites/zombie/male/Dead (1).png" id="9_5eet6"]
[ext_resource type="Texture2D" uid="uid://dc8iccup5wrwj" path="res://assets/sprites/zombie/male/Dead (2).png" id="10_454pt"]
[ext_resource type="Texture2D" uid="uid://b0obv55my08v0" path="res://assets/sprites/zombie/male/Dead (3).png" id="11_1nr3d"]
[ext_resource type="Texture2D" uid="uid://3rc403du8m01" path="res://assets/sprites/zombie/male/Dead (4).png" id="12_pj63q"]
[ext_resource type="Texture2D" uid="uid://cppu0ujtwkovp" path="res://assets/sprites/zombie/male/Dead (5).png" id="13_owf0a"]
[ext_resource type="Texture2D" uid="uid://bby7u7ckpyn85" path="res://assets/sprites/zombie/male/Dead (6).png" id="14_qtlvl"]
[ext_resource type="Texture2D" uid="uid://ctdkdqh5nrit6" path="res://assets/sprites/zombie/male/Dead (7).png" id="15_53ae5"]
[ext_resource type="Texture2D" uid="uid://c2wai2pea5okv" path="res://assets/sprites/zombie/male/Dead (8).png" id="16_wgrxk"]
[ext_resource type="Texture2D" uid="uid://cxk6um64s4raj" path="res://assets/sprites/zombie/male/Dead (9).png" id="17_3lgc3"]
[ext_resource type="Texture2D" uid="uid://6qpbvyfkhli5" path="res://assets/sprites/zombie/male/Dead (10).png" id="18_orx5i"]
[ext_resource type="Texture2D" uid="uid://cswtp4s3yk1nb" path="res://assets/sprites/zombie/male/Dead (11).png" id="19_xef8f"]
[ext_resource type="Texture2D" uid="uid://mrlsul65cf7l" path="res://assets/sprites/zombie/male/Dead (12).png" id="20_hodrh"]
[ext_resource type="Texture2D" uid="uid://c71ut44hg8pha" path="res://assets/sprites/zombie/male/Idle (1).png" id="21_h7aba"]
[ext_resource type="Texture2D" uid="uid://ctkn0bhcp0wmn" path="res://assets/sprites/zombie/male/Idle (2).png" id="22_70g3d"]
[ext_resource type="Texture2D" uid="uid://dkechx86t160a" path="res://assets/sprites/zombie/male/Idle (3).png" id="23_7gc0x"]
[ext_resource type="Texture2D" uid="uid://bb7qvkpmihtw4" path="res://assets/sprites/zombie/male/Idle (4).png" id="24_hefg2"]
[ext_resource type="Texture2D" uid="uid://ca3qhaaj40inj" path="res://assets/sprites/zombie/male/Idle (5).png" id="25_6ysgn"]
[ext_resource type="Texture2D" uid="uid://8e8fsb0npmcm" path="res://assets/sprites/zombie/male/Idle (6).png" id="26_63jdc"]
[ext_resource type="Texture2D" uid="uid://ddx8syce0klhu" path="res://assets/sprites/zombie/male/Idle (7).png" id="27_iopxh"]
[ext_resource type="Texture2D" uid="uid://lrc1aqq0y82s" path="res://assets/sprites/zombie/male/Idle (8).png" id="28_tkr7d"]
[ext_resource type="Texture2D" uid="uid://bto58uywxchn" path="res://assets/sprites/zombie/male/Idle (9).png" id="29_87nsx"]
[ext_resource type="Texture2D" uid="uid://4pd66qxdmuqj" path="res://assets/sprites/zombie/male/Idle (10).png" id="30_pgpbo"]
[ext_resource type="Texture2D" uid="uid://6gdjbbgrw2t8" path="res://assets/sprites/zombie/male/Idle (11).png" id="31_y7qla"]
[ext_resource type="Texture2D" uid="uid://dqgmvpww3w627" path="res://assets/sprites/zombie/male/Idle (12).png" id="32_kbq8h"]
[ext_resource type="Texture2D" uid="uid://cvvao4tlnfihd" path="res://assets/sprites/zombie/male/Idle (13).png" id="33_nchfo"]
[ext_resource type="Texture2D" uid="uid://hmry8nip1xqt" path="res://assets/sprites/zombie/male/Idle (14).png" id="34_4ulwq"]
[ext_resource type="Texture2D" uid="uid://1ig14awijnxj" path="res://assets/sprites/zombie/male/Idle (15).png" id="35_nkvoe"]
[ext_resource type="Texture2D" uid="uid://da13g8bjyokw0" path="res://assets/sprites/zombie/male/Walk (1).png" id="36_yxomq"]
[ext_resource type="Texture2D" uid="uid://u4uwb02u0a7u" path="res://assets/sprites/zombie/male/Walk (2).png" id="37_bx2v1"]
[ext_resource type="Texture2D" uid="uid://b4gpu67dq25gv" path="res://assets/sprites/zombie/male/Walk (3).png" id="38_v5epi"]
[ext_resource type="Texture2D" uid="uid://ddgjj5hndmfl1" path="res://assets/sprites/zombie/male/Walk (4).png" id="39_1rf3o"]
[ext_resource type="Texture2D" uid="uid://s58ib2j4stfa" path="res://assets/sprites/zombie/male/Walk (5).png" id="40_lbjm2"]
[ext_resource type="Texture2D" uid="uid://b4ww4khrpfpu" path="res://assets/sprites/zombie/male/Walk (6).png" id="41_xsgnn"]
[ext_resource type="Texture2D" uid="uid://sdl17twjr172" path="res://assets/sprites/zombie/male/Walk (7).png" id="42_xd4ju"]
[ext_resource type="Texture2D" uid="uid://cnmulrlycs1c0" path="res://assets/sprites/zombie/male/Walk (8).png" id="43_1uwry"]
[ext_resource type="Texture2D" uid="uid://dfy2sek7t6tou" path="res://assets/sprites/zombie/male/Walk (9).png" id="44_aq4rg"]
[ext_resource type="Texture2D" uid="uid://cqjkhugj8c0eh" path="res://assets/sprites/zombie/male/Walk (10).png" id="45_0bl64"]
[ext_resource type="Texture2D" uid="uid://c862c2o0yi2i0" path="res://assets/sprites/bars/enemy_under.png" id="48_i8ipc"]
[ext_resource type="Texture2D" uid="uid://d2ayvmbvo6qu" path="res://assets/sprites/bars/enemy_over.png" id="49_qswhy"]
[ext_resource type="Texture2D" uid="uid://bvwf7v5xjmpos" path="res://assets/sprites/bars/enemy_progress.png" id="50_ghqjj"]
[ext_resource type="AudioStream" uid="uid://cn0cqv42oe4fe" path="res://assets/sounds/zombie-death.mp3" id="51_ghqjj"]
[ext_resource type="AudioStream" uid="uid://ddq6qgwsuk4bv" path="res://assets/sounds/zombie-bite.mp3" id="51_qswhy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mlp8g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_i6wqh")
}, {
"duration": 1.0,
"texture": ExtResource("2_t35ya")
}, {
"duration": 1.0,
"texture": ExtResource("3_5qykh")
}, {
"duration": 1.0,
"texture": ExtResource("4_6nj7t")
}, {
"duration": 1.0,
"texture": ExtResource("5_i8ipc")
}, {
"duration": 1.0,
"texture": ExtResource("6_qswhy")
}, {
"duration": 1.0,
"texture": ExtResource("7_ghqjj")
}, {
"duration": 1.0,
"texture": ExtResource("8_bp43y")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_5eet6")
}, {
"duration": 1.0,
"texture": ExtResource("10_454pt")
}, {
"duration": 1.0,
"texture": ExtResource("11_1nr3d")
}, {
"duration": 1.0,
"texture": ExtResource("12_pj63q")
}, {
"duration": 1.0,
"texture": ExtResource("13_owf0a")
}, {
"duration": 1.0,
"texture": ExtResource("14_qtlvl")
}, {
"duration": 1.0,
"texture": ExtResource("15_53ae5")
}, {
"duration": 1.0,
"texture": ExtResource("16_wgrxk")
}, {
"duration": 1.0,
"texture": ExtResource("17_3lgc3")
}, {
"duration": 1.0,
"texture": ExtResource("18_orx5i")
}, {
"duration": 1.0,
"texture": ExtResource("19_xef8f")
}, {
"duration": 1.0,
"texture": ExtResource("20_hodrh")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_h7aba")
}, {
"duration": 1.0,
"texture": ExtResource("22_70g3d")
}, {
"duration": 1.0,
"texture": ExtResource("23_7gc0x")
}, {
"duration": 1.0,
"texture": ExtResource("24_hefg2")
}, {
"duration": 1.0,
"texture": ExtResource("25_6ysgn")
}, {
"duration": 1.0,
"texture": ExtResource("26_63jdc")
}, {
"duration": 1.0,
"texture": ExtResource("27_iopxh")
}, {
"duration": 1.0,
"texture": ExtResource("28_tkr7d")
}, {
"duration": 1.0,
"texture": ExtResource("29_87nsx")
}, {
"duration": 1.0,
"texture": ExtResource("30_pgpbo")
}, {
"duration": 1.0,
"texture": ExtResource("31_y7qla")
}, {
"duration": 1.0,
"texture": ExtResource("32_kbq8h")
}, {
"duration": 1.0,
"texture": ExtResource("33_nchfo")
}, {
"duration": 1.0,
"texture": ExtResource("34_4ulwq")
}, {
"duration": 1.0,
"texture": ExtResource("35_nkvoe")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("36_yxomq")
}, {
"duration": 1.0,
"texture": ExtResource("37_bx2v1")
}, {
"duration": 1.0,
"texture": ExtResource("38_v5epi")
}, {
"duration": 1.0,
"texture": ExtResource("39_1rf3o")
}, {
"duration": 1.0,
"texture": ExtResource("40_lbjm2")
}, {
"duration": 1.0,
"texture": ExtResource("41_xsgnn")
}, {
"duration": 1.0,
"texture": ExtResource("42_xd4ju")
}, {
"duration": 1.0,
"texture": ExtResource("43_1uwry")
}, {
"duration": 1.0,
"texture": ExtResource("44_aq4rg")
}, {
"duration": 1.0,
"texture": ExtResource("45_0bl64")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6nj7t"]
radius = 11.0
height = 54.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6nj7t"]
size = Vector2(17, 56)

[sub_resource type="CircleShape2D" id="CircleShape2D_6nj7t"]
radius = 214.11446

[sub_resource type="Animation" id="Animation_i8ipc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ZombieMaleSrite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ZombieMaleSrite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackPivot/HitBox/Collision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6nj7t"]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ZombieMaleSrite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ZombieMaleSrite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackPivot/HitBox/Collision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_qswhy"]
resource_name = "dead"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ZombieMaleSrite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dead"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ZombieMaleSrite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qswhy"]
_data = {
&"RESET": SubResource("Animation_i8ipc"),
&"attack": SubResource("Animation_6nj7t"),
&"dead": SubResource("Animation_qswhy")
}

[node name="Zombie_male" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 17
script = ExtResource("1_t35ya")

[node name="ZombieMaleSrite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.13, 0.13)
sprite_frames = SubResource("SpriteFrames_mlp8g")
animation = &"attack"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 4)
shape = SubResource("CapsuleShape2D_6nj7t")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(16, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-19, 0)

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = -25.000002
offset_top = -37.999996
offset_right = 231.0
offset_bottom = 2.0000038
scale = Vector2(0.2, 0.2)
texture_under = ExtResource("48_i8ipc")
texture_over = ExtResource("49_qswhy")
texture_progress = ExtResource("50_ghqjj")

[node name="AttackPivot" type="Node2D" parent="."]

[node name="HitBox" type="Area2D" parent="AttackPivot"]
collision_layer = 32
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="AttackPivot/HitBox"]
position = Vector2(8.5, 4)
shape = SubResource("RectangleShape2D_6nj7t")
disabled = true

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_6nj7t")

[node name="Attack" type="AudioStreamPlayer2D" parent="."]
scale = Vector2(0.13, 0.13)
stream = ExtResource("51_qswhy")
bus = &"SFX"
area_mask = 4

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("51_ghqjj")
bus = &"SFX"
area_mask = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qswhy")
}

[connection signal="body_entered" from="AttackPivot/HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
